--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -197,7 +197,6 @@
             android:layout_height="@dimen/_90sdp"
             android:layout_marginTop="@dimen/_8sdp"
             android:layout_marginBottom="@dimen/_8sdp"
-            android:id="@+id/scienceCard"
             app:cardCornerRadius="@dimen/_8sdp"
             app:layout_constraintTop_toBottomOf="@id/myProfile"
             >
@@ -206,6 +205,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
+                android:id="@+id/scienceCard"
                 android:background="@color/gray_50_backgroundd"
                 android:padding="@dimen/_3sdp"
                 >
@@ -240,7 +240,6 @@
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginTop="@dimen/_8sdp"
             android:layout_marginBottom="@dimen/_8sdp"
-            android:id="@+id/commerceCard"
             app:cardCornerRadius="@dimen/_8sdp"
             app:layout_constraintTop_toBottomOf="@id/myProfile"
             >
@@ -249,6 +248,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
+                android:id="@+id/commerceCard"
                 android:padding="@dimen/_3sdp"
                 android:background="@color/gray_50_backgroundd"
                 >
@@ -285,7 +285,6 @@
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginTop="@dimen/_8sdp"
             android:layout_marginBottom="@dimen/_8sdp"
-            android:id="@+id/artsCard"
             app:cardCornerRadius="@dimen/_8sdp"
             app:layout_constraintTop_toBottomOf="@id/myProfile"
             >
@@ -294,6 +293,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
+                android:id="@+id/artsCard"
                 android:background="@color/gray_50_backgroundd"
                 android:padding="@dimen/_3sdp"
                 >
@@ -324,53 +324,19 @@
 
 
         </androidx.cardview.widget.CardView>
-<!--        <androidx.cardview.widget.CardView-->
-<!--            android:layout_width="@dimen/_90sdp"-->
-<!--            android:layout_height="@dimen/_90sdp"-->
-<!--            android:layout_marginStart="@dimen/_15sdp"-->
-<!--            android:layout_margin="@dimen/_8sdp"-->
-<!--            android:id="@+id/ComputerDpt"-->
-<!--            app:cardCornerRadius="@dimen/_8sdp"-->
-<!--            app:layout_constraintTop_toBottomOf="@id/myProfile"-->
-<!--            >-->
-
-<!--            <LinearLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:orientation="vertical"-->
-<!--                >-->
-<!--                <ImageView-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="@dimen/_65sdp"-->
-<!--                    android:src="@drawable/chemistry_icon2"-->
-<!--                    android:id="@+id/computer"-->
-<!--                    />-->
-
-<!--                <TextView-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:text="Science"-->
-<!--                    android:textSize="@dimen/_16sdp"-->
-<!--                    android:textStyle="bold"-->
-<!--                    android:gravity="center"-->
-<!--                    android:textColor="@color/sky"-->
-<!--                    android:layout_gravity="center"-->
-<!--                    android:paddingBottom="@dimen/_3sdp"-->
-<!--                    />-->
-
-
-<!--            </LinearLayout>-->
-
-
-
-<!--        </androidx.cardview.widget.CardView>-->
 
     </LinearLayout>
 
 
 <!--</HorizontalScrollView>-->
 
-
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="visible"
+                android:id="@+id/departmentLayout"
+                >
 
 
     <TextView
@@ -390,40 +356,59 @@
         />
 
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginEnd="@dimen/_3sdp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:listitem="@layout/subject_design"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="3"
+        android:id="@+id/dsubjectRecycler"
+        app:layout_constraintTop_toBottomOf="@id/subjectTitle"
+        />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:layout_marginEnd="@dimen/_3sdp"
+</LinearLayout>
+
+
+
+
+
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:listitem="@layout/subject_design"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                app:spanCount="3"
-                android:id="@+id/dsubjectRecycler"
-                app:layout_constraintTop_toBottomOf="@id/subjectTitle"
-                />
+                android:orientation="vertical"
+                android:visibility="gone"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:id="@+id/scienceDepShow"
+                >
+            </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="gone"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:id="@+id/commerceDepShow"
+                >
+            </LinearLayout>
 
-
-<!--            <ImageView-->
-<!--                app:layout_constraintTop_toBottomOf="@id/dsubjectRecycler"-->
-<!--                app:layout_constraintStart_toStartOf="parent"-->
-<!--                app:layout_constraintEnd_toEndOf="parent"-->
-<!--                android:layout_width="@dimen/_200sdp"-->
-<!--                android:layout_height="@dimen/_100sdp"-->
-<!--                android:src="@drawable/biological_icon3"-->
-
-<!--                />-->
-
-
-
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="gone"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:id="@+id/artsDepShow"
+                >
+            </LinearLayout>
 
         </LinearLayout>
 
     </ScrollView>
-
-
 
 
 
