--- a/app/src/main/res/layout/fragment_commerce_department.xml
+++ b/app/src/main/res/layout/fragment_commerce_department.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:id="@+id/commerDep"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="@dimen/_10sdp"
+    app:cardElevation="@dimen/_8sdp"
+    android:layout_margin="@dimen/_5sdp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragments.CommerceDepartmentFragment">
 
@@ -18,8 +22,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:elevation="@dimen/_8sdp"
+
             app:cardCornerRadius="@dimen/_10sdp"
-            android:layout_margin="@dimen/_5sdp"
+            android:layout_marginStart="@dimen/_5sdp"
+            android:layout_marginEnd="@dimen/_5sdp"
+            android:layout_marginTop="@dimen/_15sdp"
             >
             <TextView
                 android:layout_width="match_parent"
@@ -31,7 +38,7 @@
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:padding="@dimen/_5sdp"
-                android:textColor="@color/sky"
+                android:textColor="@color/black_textColor"
                 />
 
         </androidx.cardview.widget.CardView>
@@ -42,6 +49,7 @@
 
 
         <LinearLayout
+            android:layout_marginTop="@dimen/_20sdp"
             app:layout_constraintTop_toBottomOf="@id/departnameTitle"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_100sdp"
@@ -146,6 +154,7 @@
             android:layout_height="@dimen/_100sdp"
             android:orientation="horizontal"
             android:id="@+id/department"
+            android:layout_marginTop="@dimen/_5sdp"
             android:gravity="center"
             android:weightSum="2"
             android:layout_marginStart="@dimen/_5sdp"
@@ -182,7 +191,7 @@
                         android:textSize="@dimen/_16sdp"
                         android:textStyle="bold"
                         android:gravity="center"
-                        android:textColor="@color/sky"
+                        android:textColor="@color/black_textColor"
                         android:layout_gravity="center"
                         android:paddingBottom="@dimen/_3sdp"
                         />
@@ -220,13 +229,13 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Commerce"
+                        android:text="ব্যবসায় উদ্যোগ"
                         android:textSize="@dimen/_15sdp"
                         android:singleLine="true"
                         android:ellipsize="marquee"
                         android:textStyle="bold"
                         android:gravity="center"
-                        android:textColor="@color/sky"
+                        android:textColor="@color/black_textColor"
                         android:layout_gravity="center"
                         android:paddingBottom="@dimen/_3sdp"
                         />
@@ -254,4 +263,4 @@
 
     </LinearLayout>
 
-</FrameLayout>
+</androidx.cardview.widget.CardView>
