--- a/app/src/main/res/drawable/department_clicked.xml
+++ b/app/src/main/res/drawable/department_clicked.xml
@@ -3,6 +3,7 @@
     android:shape="rectangle">
 
     <solid android:color="@color/box_clicked"/>
+    <corners android:radius="@dimen/_8sdp"/>
     <stroke android:width="5dp" android:color="@color/sky"/>
 
 </shape>
