--- a/app/src/main/res/values-night/night.xml
+++ b/app/src/main/res/values-night/night.xml
@@ -7,7 +7,9 @@
     <color name="black_textColor">#FFFFFF</color>
     <color name="gray_50_backgroundd">#12FAFAFA</color>
     <color name="sky">#797C80</color>
+
     <color name="sky_text">#F9F9FA</color>
+    <color name="recycler_back">#B1C8DA</color>
 
 
 </resources>
