--- a/app/src/main/res/layout/chapter_recycler_design.xml
+++ b/app/src/main/res/layout/chapter_recycler_design.xml
@@ -2,7 +2,12 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="@dimen/_5sdp"
+    android:layout_marginTop="@dimen/_5sdp"
+    android:layout_marginBottom="@dimen/_5sdp"
+    android:layout_marginStart="@dimen/_5sdp"
+    android:layout_marginEnd="@dimen/_5sdp"
+
+    android:paddingBottom="@dimen/_10sdp"
     app:cardCornerRadius="@dimen/_10sdp"
     app:cardElevation="@dimen/_10sdp"
    android:id="@+id/chapterCard"
@@ -63,6 +68,7 @@
             app:layout_constraintTop_toBottomOf="@id/chapterTopicName"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="@dimen/_5sdp"
+            android:layout_marginBottom="@dimen/_10sdp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Abed khan"
