--- a/app/src/main/res/layout/fragment_read.xml
+++ b/app/src/main/res/layout/fragment_read.xml
@@ -13,6 +13,7 @@
     android:id="@+id/readRecycler"
     tools:listitem="@layout/chapter_recycler_design"
     android:layout_marginTop="@dimen/_8sdp"
+    android:layout_marginBottom="@dimen/_10sdp"
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
     />
 
