--- a/app/src/main/res/layout/activity_admin_login.xml
+++ b/app/src/main/res/layout/activity_admin_login.xml
@@ -74,6 +74,18 @@
                 app:layout_constraintTop_toBottomOf="@+id/adminPassword"
                 tools:layout_editor_absoluteX="0dp" />
 
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:visibility="gone"
+
+                android:progressTint="@color/black_textColor"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@id/adminLoginBtn"
+                app:layout_constraintBottom_toBottomOf="@id/adminLoginBtn"
+                app:layout_constraintStart_toStartOf="@id/adminLoginBtn"
+                app:layout_constraintEnd_toEndOf="@id/adminLoginBtn"/>
+
             <TextView
                 android:id="@+id/adminRegisterOption"
                 android:layout_width="match_parent"
