exam quiz design

--- a/app/src/main/res/drawable-v24/department_clicked_null_back.xml
+++ b/app/src/main/res/drawable-v24/department_clicked_null_back.xml
@@ -4,6 +4,6 @@
 
     <solid android:color="@color/gray_50_backgroundd"/>
     <corners android:radius="@dimen/_8sdp"/>
-    <stroke android:width="5dp" android:color="@color/sky"/>
+<!--    <stroke android:width="5dp" android:color="@color/sky"/>-->
 
 </shape>
