--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,8 @@
     <color name="gray_100">#F5F5F5</color>
     <color name="white_background">#FFFFFFFF</color>
     <color name="black_textColor">#FF000000</color>
+    <color name="background">#e1e6ec</color>
+
 
 
 
