--- a/app/src/main/res/layout/activity_admin_dashboard.xml
+++ b/app/src/main/res/layout/activity_admin_dashboard.xml
@@ -4,7 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/fragmentView"
     tools:context=".Activities.AdminDashboard">
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:id="@+id/dashboard"
+        >
+
+
+
 
     <TextView
         android:id="@+id/textView"
@@ -60,10 +73,14 @@
         android:textAlignment="center"
         android:textColor="#F44336"
         android:textSize="@dimen/_25sdp"
-
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/editOption"
         tools:layout_editor_absoluteX="26dp" />
+
+    </LinearLayout>
+
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
