--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -36,19 +36,35 @@
         android:layout_margin="@dimen/_10sdp"
         >
 
-        <EditText
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_40sdp"
-            app:layout_constraintTop_toBottomOf="@id/title"
-            android:id="@+id/subjectName"
-            android:paddingTop="@dimen/_2sdp"
-            android:paddingBottom="@dimen/_2sdp"
-            android:background="@drawable/department_clicked"
-            android:inputType="textMultiLine"
-            android:hint="@string/subject_name"
-            android:paddingStart="@dimen/_10sdp"
+            android:layout_height="wrap_content"
+
+            android:layout_marginStart="@dimen/_2sdp"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:layout_marginEnd="@dimen/_2sdp"
             android:layout_marginBottom="@dimen/_8sdp"
-            tools:ignore="RtlSymmetry" />
+            android:hint="Subject name"
+
+            android:textColorHint="#953F51B5"
+            app:boxCornerRadiusBottomEnd="@dimen/_15sdp"
+            app:boxCornerRadiusBottomStart="@dimen/_15sdp"
+            app:boxCornerRadiusTopEnd="@dimen/_15sdp"
+            app:boxCornerRadiusTopStart="@dimen/_15sdp"
+
+            app:boxStrokeColor="#0A0E22"
+            app:helperTextTextColor="#EF0606">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/subjectName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_18sdp" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
 
         <EditText
