--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -131,7 +131,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/_40sdp"
             app:layout_constraintTop_toBottomOf="@id/title"
-            android:id="@+id/WrightAns"
+            android:id="@+id/rightAns"
             android:background="@drawable/department_clicked"
             android:inputType="textMultiLine"
             android:paddingTop="@dimen/_2sdp"
@@ -173,7 +173,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/_40sdp"
             app:layout_constraintTop_toBottomOf="@id/title"
-            android:id="@+id/answarwThree"
+            android:id="@+id/answerThree"
             android:background="@drawable/department_clicked"
             android:inputType="textMultiLine"
             android:hint="@string/answer_three"
